tests/semantic/comp_type1/comp_type1.err
Error: Type t1 redefined in file comp_type1.dl at line 5
.comp Y : X {
^-------------
1 errors generated, evaluation aborted
